# Takeoff-and-Landing-controller-for-PX4-Fixed-wing-aircraft

./: .gitmodules  Makefile  README.md  upload_snapdragon.sh
.ci/: Jenkinsfile-compile  Jenkinsfile-hardware
.devcontainer/: devcontainer.json
.github/workflows/: metadata.yml
ROMFS/cannode/init.d/: rcS
ROMFS/px4fmu_common/init.d/: rc.fw_defaults  rc.interface  rc.io  rc.logging  rc.mc_apps  rc.sensors  rc.vehicle_setup  rc.vtol_defaults  rcS
ROMFS/px4fmu_common/init.d-posix/: 10016_iris  10020_if750a  10030_px4vision  1010_iris_opt_flow  1011_iris_irlock  1012_iris_rplidar  1013_iris_vision  1014_solo  1015_iris_obs_avoid  1016_iris_rtps  1017_iris_opt_flow_mockup  1018_iris_vision_velocity  1019_iris_dual_gps  1020_uuv_generic  1021_uuv_hippocampus  1030_plane  1031_plane_cam  1032_plane_catapult  1033_plane_lidar  1033_rascal  1040_standard_vtol  1041_tailsitter  1042_tiltrotor  1060_rover  1061_r1_rover  1062_tf-r1  1070_boat  17001_tf-g1  50003_aion_robotics_r1_rover  6011_typhoon_h480  rcS
ROMFS/px4fmu_common/mixers/: simple_direct.aux.mix  simple_direct.main.mix  tvc_quad_x.main.mix  vtol_tailsitter_duo.main.mix
ROMFS/px4fmu_test/init.d/: rc.sensors  rcS
Tools/: gazebo_sitl_multiple_run.sh  px_romfs_pruner.py  setup_jsbsim.bash  sitl_run.sh
Tools/HIL/: run_nsh_cmd.py
Tools/astyle/: files_to_check_code_style.sh
Tools/setup/: requirements.txt
Tools/uorb_graph/: create.py
boards/aerotenna/ocpoc/: CMakeLists.txt  default.cmake
boards/airmind/mindpx-v2/: default.cmake
boards/atlflight/eagle/: default.cmake  qurt-default.cmake  qurt.cmake
boards/atlflight/excelsior/: CMakeLists.txt  default.cmake  qurt-default.cmake  qurt.cmake
boards/auav/x21/: default.cmake
boards/av/x-v1/: default.cmake
boards/beaglebone/blue/: CMakeLists.txt  default.cmake
boards/bitcraze/crazyflie/: default.cmake
boards/cuav/x7pro/: default.cmake
boards/emlid/navio2/: CMakeLists.txt  default.cmake
boards/intel/aerofc-v1/: rtps.cmake  (+1 more)
cmake/: px4_add_board.cmake  px4_add_common_flags.cmake
msg/: CMakeLists.txt  commander_state.msg  ekf2_timestamps.msg  ekf_gps_drift.msg  ekf_gps_position.msg  estimator_innovations.msg  estimator_mag_cal.msg  estimator_sensor_bias.msg  estimator_status.msg  estimator_status_flags.msg  obstacle_distance.msg  rate_ctrl_status.msg  sensor_gyro_fft_axis.msg  sensor_gyro_fifo.msg  sensor_mag.msg  system_power.msg  vehicle_attitude.msg  vehicle_attitude_setpoint.msg  vehicle_control_mode.msg  vehicle_global_position.msg  vehicle_local_position.msg  vehicle_status.msg  vehicle_status_flags.msg  wind_estimate.msg  yaw_estimator_status.msg
msg/tools/: generate_microRTPS_bridge.py  uorb_rtps_message_ids.yaml
posix-configs/bbblue/: px4.config  px4_fw.config
posix-configs/excelsior/: mainapp.config  px4.config
posix-configs/ocpoc/: px4.config
posix-configs/rpi/: px4.config  px4_fw.config  px4_no_shield.config  px4_test.config
src/drivers/: drv_pwm_output.h  drv_sensor.h
src/modules/mavlink/: CMakeLists.txt  mavlink_bridge_header.h  mavlink_command_sender.h  mavlink_ftp.cpp  mavlink_ftp.h  mavlink_high_latency2.cpp  mavlink_log_handler.cpp  mavlink_log_handler.h  mavlink_main.cpp  mavlink_main.h  mavlink_messages.cpp  mavlink_mission.cpp  mavlink_mission.h  mavlink_parameters.cpp  mavlink_parameters.h  mavlink_receiver.cpp  mavlink_receiver.h  mavlink_simulator.cpp  mavlink_simulator.h  mavlink_timesync.h  mavlink_ulog.cpp  tune_publisher.cpp
src/modules/mavlink/mavlink_tests/: CMakeLists.txt
src/modules/mavlink/streams/: flight_information.h
test/mavsdk_tests/: test_multicopter_mission.cpp
(+758 files in other folders)
